--- a/css/style.css
+++ b/css/style.css
@@ -337,6 +337,7 @@ li {
 .HEAD {
   width: 100%;
   height: 100vh;
+  overflow: hidden;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
